--- a/my_website/aboutme.css
+++ b/my_website/aboutme.css
@@ -3,42 +3,47 @@ body {
     background-image: url("images/greenbackground.jpg");
     background-attachment: fixed;
 }
+
 h1.header {
     padding: 1em;
     color: white;
     background-color: #0000ff;
     clear: left;
     text-align: center;
-    border-color: black;
+    border-color: white;
     border: 8px solid;
+    -webkit-animation: mymove 5s infinite;
+}
+    @-webkit-keyframes mymove {
+    50% {border-color: lightblue;}
+    50% {color: cyan;}
+
 }
 h1.basic {
-    text-align: center;
+    text-align: left;
     font-family: "Times New Roman", serif;
     font-weight: bold;
     color: #0066ff;
-    border: 8px solid;
-    border-color: red coral red;
-    -webkit-animation: mymove 5s infinite;
 }
-@-webkit-keyframes mymove {
-    50% {border-color: purple coral purple;}
-}
+
 h2 {
     font-family: "Times New Roman", serif;
     color: #0066ff;
 }
 img.quang {
     display: block;
-    float: right;
+    margin: auto;
+    padding: 1em;
 }
 img.quang2 {
     display: block;
-    margin: auto;
     float: right;
+    padding: 1em;
 }
+
 table {
     text-align: center;
+    padding-bottom: 30px;
 }
 tr {
     background-color: #5cd65c;
@@ -77,11 +82,44 @@ div.menu ul li a:active {
 p.quote {
     color: darkred;
 }
+
+div.source {
+    margin-left: 30px;
+}
+
+h2.source {
+    font-weight: bold;
+}
+
 div.test {
+    position: absolute;
     float: left;
     margin-right: 30px;
+    padding: 10px;
+    padding-bottom: 15px;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 10px;
+    border-color: darkred;
+    background-color: lightyellow;
 }
+
+div.test2 {
+    position: fixed;
+    padding: 10px;
+    padding-left: 20px;
+    padding-bottom: 6px;
+    margin-left: 35em;
+    position: static;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 10px;
+    border-color: darkred;
+    background-color: lightyellow;
+}
+
 div.songs, div.hobbies {
     clear: left;
-    margin-left: 30;
+    margin-left: 10px;
+    margin-right: 10px;
 }
