--- a/my_website/portfolio.css
+++ b/my_website/portfolio.css
@@ -30,3 +30,23 @@ div ul li a:hover {
 div ul li a:active {
     background-color: #33d6ff;
 }
+
+h1.head {
+    background-color: yellow;
+    padding: 1em;
+    color: black;
+    text-align: center;
+    font-weight: bold;
+    border: 8px solid;
+    border-color: #ff4d4d;
+    -webkit-animation: mymove 5s infinite;
+}
+@-webkit-keyframes mymove {
+    50% {border-color: #ff1a1a;}
+    50% {color: purple;}
+}
+
+footer.foot {
+    padding: 2em;
+    font-weight: bold;
+}
