--- a/my_website/index.css
+++ b/my_website/index.css
@@ -1,9 +1,13 @@
+head{
+    cursor: url("cursors/pichu.cur"), auto;
+}
 body {
     font-family: Verdana, sans-serif;
     background-image: url("images/greenbackground.jpg");
     background-attachment: fixed;
     #background-size: 100%;
     background-repeat: no-repeat;
+    cursor: url("cursors/pichu.cur"), auto;
 }
 
 h1.head {
