--- a/my_website/portfolio.css
+++ b/my_website/portfolio.css
@@ -7,7 +7,7 @@ body {
     background-attachment: fixed;
     cursor: url("cursors/pichu.cur"), auto;
 }
-div ul {
+div.menu ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -15,11 +15,11 @@ div ul {
     background-color: #333333;
 }
 
-div ul li {
+div.menu ul li {
     float: left;
 }
 
-div ul li a {
+div.menu ul li a {
     display: block;
     color: white;
     text-align: center;
@@ -27,11 +27,11 @@ div ul li a {
     text-decoration: none;
 }
 
-div ul li a:hover {
+div.menu ul li a:hover {
     background-color: #ff80d5;
 }
 
-div ul li a:active {
+div.menu ul li a:active {
     background-color: #33d6ff;
 }
 
@@ -50,7 +50,28 @@ h1.head {
     50% {color: purple;}
 }
 
-footer.foot {
-    padding: 2em;
-    font-weight: bold;
+img.kappa {
+    
+    padding-left: 200px;
+}
+
+img.firstgame {
+    
+    padding-left: 100px;
+}
+
+h2.explain {
+    text-align: center;
+    font-family: "Times New Roman", serif;
+    color: #0066ff;
+    padding-top: 1em;
+}
+
+p.explain {
+    text-indent: 50px;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 10px;
+    border-color: darkred;
+    background-color: lightyellow;
 }
