--- a/my_website/index.css
+++ b/my_website/index.css
@@ -5,7 +5,7 @@ body {
     font-family: Verdana, sans-serif;
     background-image: url("images/greenbackground.jpg");
     background-attachment: fixed;
-    #background-size: 100%;
+    /* background-size: 100%; */
     background-repeat: no-repeat;
     cursor: url("cursors/pichu.cur"), auto;
 }
@@ -61,9 +61,9 @@ p.desc {
     padding: 1em;
 }
 
-div.source {
+/* div.source {
     padding: 2em;
-}
+} */
 
 h2.source {
     font-weight: bold;
