--- a/my_website/aboutme.css
+++ b/my_website/aboutme.css
@@ -1,8 +1,14 @@
+@font-face { 
+    font-family: OldNewsPaper; 
+    src: url('fonts/OldNewspaperTypes.ttf'); 
+}
+
 head {
     cursor: url("cursors/pichu.cur"), auto;
 }
 body {
-    font-family: Verdana, sans-serif;
+    /* font-family: Verdana, sans-serif; */
+    font-family: OldNewsPaper;
     background-image: url("images/greenbackground.jpg");
     background-attachment: fixed;
     cursor: url("cursors/pichu.cur"), auto;
